turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:11: error: type red is not a member of object java.awt.Color
setCouleur(couleur:Color.red)
                         ^