turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
var x=0
while (x != 90) {
	avance(100:Double)
	recule(100:Double)
	droite(1:Double)
	x=x+1
}
var y=0
setCouleur(couleur:Color.red)
while (y != 90) {
	avance(100:Double)
	recule(100:Double)
	droite(1:Double)
	y=y+1
}
}